# bet_service

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists3.txt  CMakeLists_container.txt  Dockerfile  docker_commands.txt
Client/: CMakeLists.txt  DatabaseFiller.h  GrpcConnectorImpl.h  IConnector.h  MetaData.h  PostgresConnector.cpp  PostgresConnector.h  RawSocketConnectorImpl.h  StressTester.cpp  StressTester.h  main.cpp
Client/.claude/: settings.local.json
Server/: GrpsResponserImpl.h  IResponser.h  Server.cpp  SignInServiceImpl.h  TcpResponserImpl.h  server_config.grpc.pb.cc  server_config.grpc.pb.h  server_config.pb.cc  server_config.pb.h  server_config.proto
Services/: ConnectionPool.h  Dockerfile  UserService.cpp  UserService.h  main.cpp  user_service.grpc.pb.h  user_service.pb.cc  user_service.pb.h
Services/bet_service/: Dockerfile  bet_service.proto  db.go  go.mod  go.sum  main.go  server.go
Services/bet_service/betgun/: betgun.go  main.go
Services/bet_service/proto/: bet_service.pb.go  bet_service_grpc.pb.go
Services/login_service/: AsyncUserService.cpp  AsyncUserService.h  CMakeLists.txt  CallHandler.cpp  CallHandler.h  ConnectionPool.h  Dockerfile  UserService.h  main.cpp  user_service.grpc.pb.cc  user_service.proto
